--- a/src/components/main/banner/style.css
+++ b/src/components/main/banner/style.css
@@ -22,3 +22,45 @@
     color: white;
     text-shadow: 3px 5px 2px #474747;
 }
+
+@media screen and (max-width: 768px){
+
+    .capa h1 {
+      font-size: 60px;
+    }
+  
+    .secao-nossos-sabores {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .secao-nossos-sabores img {
+      width: 100%;
+    }
+  
+    .texto-secao-nossos-sabores,
+    .texto-secao-nossos-eventos,
+    .texto-secao-sobre-nos {
+      width: 100%;
+      padding: 100px 10px;
+      text-align: center;
+    }
+  
+    .secao-nossos-eventos {
+      flex-direction: column-reverse;
+      align-items: center;
+    }
+  
+    .secao-nossos-eventos img {
+      width: 100%;
+    }
+  
+    .secao-sobre-nos {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .secao-sobre-nos img {
+      width: 100%;
+    }
+  }
