--- a/src/components/main/sabores/style.css
+++ b/src/components/main/sabores/style.css
@@ -1,5 +1,5 @@
-.capa {
-    background-image: url("../../../../assets/banner-sabores.jpg");
+.capa-sabores {
+    background-image: url("./assets/banner-sabores.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -8,7 +8,7 @@
     margin-top: 80px;
 }
 
-.capa div {
+.capa-sabores div {
     display: flex;
     width: 100%;
     height: 100%;
@@ -17,14 +17,55 @@
     text-align: center;
 }
 
-.capa h1 {
+.capa-sabores h1 {
     font-size: 100px;
     color: white;
     text-shadow: 3px 5px 2px #474747;
 }
 
+.section-cards {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 50px auto;
+    gap: 10px;
+}
+
+.container-cards {
+    max-width: 1024px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 10px auto;
+    gap: 50px;
+    padding: 0 0px;
+}
+
+.cards {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: calc(100% / 4 );
+    height: 350px;
+    padding: 20px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.425);
+}
+
+.cards img {
+    height: 200px;
+}
+
+.cards h3 {
+    padding-bottom: 10px;
+}
+
 @media screen and (max-width: 768px){
-    .capa h1 {
+    .capa-sabores h1 {
       font-size: 60px;
     }
 }
